--- a/style.css
+++ b/style.css
@@ -5,8 +5,21 @@ body {
     background: linear-gradient(to right, #b92b27, #1565c0)
 }
 
+.userInfo{
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 50px;
+    background-color: black;
+    color: white;
+}
+
+hr{
+    color: white;
+}
+
 .card {
-    
+
     margin-bottom: 20px;
     border: none
 }
